<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/scrollView"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/insertLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.insert.InsertNoteFragment">

        <EditText
            android:id="@+id/insertTitle_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standart"
            android:layout_marginTop="90dp"
            android:padding="@dimen/padding_standart"
            android:textSize="@dimen/title_text_size"
            android:elevation="10dp"
            android:background="@drawable/note_border"
            android:ems="8"
            android:hint="@string/title_text"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/insertContext_et"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="@dimen/margin_standart"
            android:layout_marginTop="@dimen/content_edit_margin_top"
            android:layout_marginEnd="@dimen/margin_standart"
            android:padding="@dimen/padding_standart"
            android:textSize="@dimen/middle_text_size"
            android:background="@drawable/note_border"
            android:elevation="10dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/content_text"
            android:inputType="text|textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insertTitle_et" />

        <Button
            android:id="@+id/insert_btn"
            style="@style/myButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/content_edit_margin_top"
            android:text="@string/save_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insertContext_et" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>